2009-08-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/fpu/math_private.h: Add specialized GET_FLOAT_WORD
	and SET_FLOAT_WORD definitions.

2009-08-24  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/syscall-template.S: New file.
	* sysdeps/unix/make-syscalls.sh: Generate rules to use it.
	* sysdeps/unix/Makefile (omit-deps): Do not omit syscall stubs' deps.
	(compile-syscall): Pass mkdep and -g options as normal.
	(s-proto.d, s-proto-cancel.d): Don't "-include" these.
	(common-generated): Don't add them here.

2009-08-24  Ulrich Drepper  <drepper@redhat.com>

	* math/s_fdim.c: In case of overflows set errno.
	* math/s_fdimf.c: Likewise.
	* math/s_fdiml.c: Likewise.

	* math/math.h: Define math_errhandling of __FAST_MATH__ is not defined.
	* sysdeps/i386/fpu/bits/mathinline.h: Undefine math_errhandling if we
	are using the inline optimizations.

	* sysdeps/x86_64/fpu/bits/mathinline.h (__signbit): Optimize.
	(__signbitf): Likewise.

2009-08-23  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (parse_dup_op): Verify the expression is correctly
	terminated.
	* posix/Makefile (tests): Add bug-regex29.
	* posix/bug-regex29.c: New file.

	* posix/unistd.h: Define _POSIX_VERSION and _POSIX2_* correctly if
	older POSIX versions are selected.

	* stdio-common/printf_fp.c: ISO C expects to print the sign of NaN
	as well.
	* stdio-common/printf_fphex.c: Likewise.
	* stdio-common/tstdiomisc.c: Add more tests.

	* locale/locale.h: Include xlocale.h and the thread-local locale
	declarations for XPG7, not XPG6.

2009-08-21  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/powerpc/powerpc32/____longjmp_chk.S: Removed.
	* sysdeps/powerpc/powerpc64/____longjmp_chk.S: Removed.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/____longjmp_chk.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/____longjmp_chk.S: New file.
	* sysdeps/powerpc/powerpc32/__longjmp-common.S: Move CHECK_SP earlier.
	* sysdeps/powerpc/powerpc32/fpu/__longjmp-common.S: Likewise.
